--- a/_develop/config/site-symfony4.conf
+++ b/_develop/config/site-symfony4.conf
@@ -4,7 +4,7 @@ upstream ui_loadbalancer {
     }
 
 server {
-	server_name 172.99.120.15 symfony.lh;
+	server_name  symfony.lh;
 	root /var/www/vhosts/symfony/public;
 	access_log  /var/log/nginx/access.log;
 	error_log  /var/log/nginx/error.log;
